--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,10 @@
 development:
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+
+production:
   adapter: postgresql
   encoding: unicode
   database: helpdesk_development
@@ -6,8 +12,7 @@ development:
   host: localhost
 
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: helpdesk_test
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  host: localhost
+  timeout: 5000
